Cleanup and fixed newsletters not showing up

--- a/css/MainStyle.css
+++ b/css/MainStyle.css
@@ -1,14 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:700,900|Open+Sans:400,600&display=swap');
 
-/* .slider .slides li .caption {
-    border-radius: 10px;
-    background-color: rgba(69, 69, 69, 0.7);
-    padding: 2px 15px;
-    text-shadow: 2px 2px #000;
-    pointer-events: none;
-    width:auto;
-} */
-
 /* #region Global CSS */
 h1 {
     font-family: "Lato", Arial, Helvetica, sans-serif;
